--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>398 Tagged Open Ruby Bugs as of 2021-02-20 08:17:06 +0900</title>
+<title>397 Tagged Open Ruby Bugs as of 2021-02-23 04:19:08 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
-<input type="submit" value="build" />
 <input type="submit" value="lib" />
+<input type="submit" value="build" />
 <input type="submit" value="patch" />
 <input type="submit" value="ext" />
 <input type="submit" value="maybenotbug" />
@@ -44,9 +44,9 @@
 <input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">398</span> matched)
+(<span id="matched">397</span> matched)
 <table>
-<caption>398 Tagged Open Ruby Bugs as of 2021-02-20 08:17:06 +0900</caption>
+<caption>397 Tagged Open Ruby Bugs as of 2021-02-23 04:19:08 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -55,6 +55,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17649">17649</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17649">`defined?` invokes method once for each syntactic element around it</a>
+</td>
+</tr>
 <tr class=" patch build ">
 <td><a href="https://bugs.ruby-lang.org/issues/17646">17646</a>
 </td>
@@ -368,13 +375,6 @@
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17476">3.0/specifications/default/net-*.gemspec repeats the same files</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17467">17467</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17467">What makes strip() and lstrip() not stripping \u0000 from beginning of the string?</a>
 </td>
 </tr>
 <tr class=" refine ">
@@ -1054,13 +1054,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16368">Error in `YAML.load(symbolize_names: true)` with null column YAML</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/16338">16338</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16338">gemspec stub EOF separators throw warning</a>
 </td>
 </tr>
 <tr class=" core ">
