--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>373 Tagged Open Ruby Bugs as of 2021-02-27 08:18:31 +0900</title>
+<title>375 Tagged Open Ruby Bugs as of 2021-03-02 04:33:57 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -9,14 +9,14 @@
 <input type="submit" value="build" />
 <input type="submit" value="patch" />
 <input type="submit" value="lib" />
-<input type="submit" value="ext" />
 <input type="submit" value="maybenotbug" />
+<input type="submit" value="ext" />
 <input type="submit" value="thread" />
 <input type="submit" value="encoding" />
 <input type="submit" value="notbug" />
 <input type="submit" value="test" />
-<input type="submit" value="ractor" />
 <input type="submit" value="cygwin" />
+<input type="submit" value="ractor" />
 <input type="submit" value="perf" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="refine" />
@@ -26,9 +26,9 @@
 <input type="submit" value="aix" />
 <input type="submit" value="solaris" />
 <input type="submit" value="autoload" />
-<input type="submit" value="backport" />
 <input type="submit" value="irb" />
 <input type="submit" value="unfixable" />
+<input type="submit" value="backport" />
 <input type="submit" value="jit" />
 <input type="submit" value="linux" />
 <input type="submit" value="parser" />
@@ -44,9 +44,9 @@
 <input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">373</span> matched)
+(<span id="matched">375</span> matched)
 <table>
-<caption>373 Tagged Open Ruby Bugs as of 2021-02-27 08:18:31 +0900</caption>
+<caption>375 Tagged Open Ruby Bugs as of 2021-03-02 04:33:57 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -55,6 +55,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch cygwin ">
+<td><a href="https://bugs.ruby-lang.org/issues/17665">17665</a>
+</td>
+<td>patch cygwin</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17665">Make failed on x86_64-cygwin (miniruby.exe segmentation fault)</a>
+</td>
+</tr>
+<tr class=" fiber maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17664">17664</a>
+</td>
+<td>fiber maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17664">Behavior of sockets changed in Ruby 3.0 to non-blocking</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17661">17661</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17661">IO#each will segfault when if file is closed inside an `each_byte` block</a>
+</td>
+</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/17659">17659</a>
 </td>
@@ -690,13 +711,6 @@
 </td>
 <td>lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16951">Consistently referer dependencies</a>
-</td>
-</tr>
-<tr class=" backport core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16950">16950</a>
-</td>
-<td>backport core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16950">Stop nonsense keyword argument warnings in 2.6</a>
 </td>
 </tr>
 <tr class=" encoding ">
