--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>375 Tagged Open Ruby Bugs as of 2021-03-02 04:33:57 +0900</title>
+<title>375 Tagged Open Ruby Bugs as of 2021-03-02 08:54:58 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
-<input type="submit" value="build" />
 <input type="submit" value="patch" />
+<input type="submit" value="build" />
 <input type="submit" value="lib" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="ext" />
@@ -46,7 +46,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">375</span> matched)
 <table>
-<caption>375 Tagged Open Ruby Bugs as of 2021-03-02 04:33:57 +0900</caption>
+<caption>375 Tagged Open Ruby Bugs as of 2021-03-02 08:54:58 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -279,10 +279,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17543">Ractor isolation broken by `self` in shareable proc</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/17542">17542</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17542">Username and password are not decoded if retrieved from env</a>
 </td>
 </tr>
@@ -377,10 +377,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17493">Calling Reline::Unicode.calculate_width appears to lock up when called from emacs or if output is redirected</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/17492">17492</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17492">Breakpoints in debug.rb only work when program invoked with absolute filename</a>
 </td>
 </tr>
@@ -874,10 +874,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16674">Build issue of FreeBSD 12</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/16672">16672</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16672">net/http leaves original content-length header intact after inflating response</a>
 </td>
 </tr>
@@ -1329,10 +1329,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15027">When Struct#each method is overriden Struct#select and Struct#to_a use wrong collections</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/14972">14972</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14972">Net::HTTP inconsistently raises EOFError when peer closes the connection</a>
 </td>
 </tr>
